force-app/main/default/objects/Reference_Core_Payroll__c/fields/Product_3__c.field-meta.xml
<CustomField>
    <fullName>Product_3__c</fullName>
    <label>Product 3</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>401k Safe Harbor</fullName>
            </value>
            <value>
                <fullName>401k Traditional</fullName>
            </value>
            <value>
                <fullName>A la Carte Drug Testing</fullName>
            </value>
            <value>
                <fullName>Advance Partners</fullName>
            </value>
            <value>
                <fullName>ASO</fullName>
            </value>
            <value>
                <fullName>Automated Vendor Payments</fullName>
            </value>
            <value>
                <fullName>Ben Admin</fullName>
            </value>
            <value>
                <fullName>Benetrac</fullName>
            </value>
            <value>
                <fullName>Business Loans</fullName>
            </value>
            <value>
                <fullName>Business Owner&apos;s Policy</fullName>
            </value>
            <value>
                <fullName>Check Logo</fullName>
            </value>
            <value>
                <fullName>COBRA</fullName>
            </value>
            <value>
                <fullName>Commercial Auto</fullName>
            </value>
            <value>
                <fullName>Crime Bond</fullName>
            </value>
            <value>
                <fullName>Custom Reporting and Analytics</fullName>
            </value>
            <value>
                <fullName>Data Exports</fullName>
            </value>
            <value>
                <fullName>Digital Marketing Services</fullName>
            </value>
            <value>
                <fullName>EE Self-Service</fullName>
            </value>
            <value>
                <fullName>EE Voluntary Benefits</fullName>
            </value>
            <value>
                <fullName>Employee Practices Liability Insurance</fullName>
            </value>
            <value>
                <fullName>Employee Handbook Builder</fullName>
            </value>
            <value>
                <fullName>ePlan</fullName>
            </value>
            <value>
                <fullName>ERISA</fullName>
            </value>
            <value>
                <fullName>ERISA Bonds</fullName>
            </value>
            <value>
                <fullName>Errors and Omission Coverage</fullName>
            </value>
            <value>
                <fullName>ESR Services</fullName>
            </value>
            <value>
                <fullName>Expensewire</fullName>
            </value>
            <value>
                <fullName>FBAE</fullName>
            </value>
            <value>
                <fullName>Fiduciary Solutions</fullName>
            </value>
            <value>
                <fullName>FinFit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>