force-app/main/default/objects/Reference_Core_Payroll__c/fields/Product_Summary__c.field-meta.xml
<CustomField>
    <fullName>Product_Summary__c</fullName>
    <description>This will hold a list of all of the product categories that associate the MPSC documents with this object.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Product Summary</label>
    <length>5300</length>
    <type>LongTextArea</type>
</CustomField>