force-app/main/default/objects/Reference_Core_Payroll__c/fields/Products_Validated__c.field-meta.xml
<CustomField>
    <fullName>Products_Validated__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Products Validated</label>
    <type>Date</type>
</CustomField>