force-app/main/default/objects/Reference_Core_Payroll__c/fields/Proposed_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Completion_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Proposed Completion Date</label>
    <type>Date</type>
</CustomField>