force-app/main/default/objects/Reference_Core_Payroll__c/fields/Prospect_Client_Name1__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Client_Name1__c</fullName>
    <formula>Case_Lookup__r.Account.Name</formula>
    <label>Prospect-Client Name</label>
    <type>Text</type>
</CustomField>