force-app/main/default/objects/Reference_Core_Payroll__c/fields/Quarter_3_Liabilities_Complete__c.field-meta.xml
<CustomField>
    <fullName>Quarter_3_Liabilities_Complete__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Quarter 3 Liabilities Complete</label>
    <type>Date</type>
</CustomField>