force-app/main/default/objects/Reference_Core_Payroll__c/fields/RAA__c.field-meta.xml
<CustomField>
    <fullName>RAA__c</fullName>
    <label>RAA Scanned</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Add&apos;l Audit - Complete</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Incomplete - Missing scanned doc</fullName>
            </value>
            <value>
                <fullName>Incomplete - Needs to be scanned separately under RAA Doc</fullName>
            </value>
            <value>
                <fullName>Incomplete - RAA does not match Fed doc and Core legal screen</fullName>
                <label>Incomplete - RAA does not match Fed doc and / or Core legal screen</label>
            </value>
            <value>
                <fullName>Incomplete - RAA not signed and/or dated</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>