force-app/main/default/objects/Reference_Core_Payroll__c/fields/RAA_Inaccurate_Reason__c.field-meta.xml
<CustomField>
    <fullName>RAA_Inaccurate_Reason__c</fullName>
    <description>Federal Reporting Agent Authorization (RAA) inaccuracy reason</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Federal Reporting Agent Authorization (RAA) inaccuracy reason</inlineHelpText>
    <label>RAA Inaccurate Reason</label>
    <type>TextArea</type>
</CustomField>