force-app/main/default/objects/Reference_Core_Payroll__c/fields/Record_Locked__c.field-meta.xml
<CustomField>
    <fullName>Record_Locked__c</fullName>
    <defaultValue>true</defaultValue>
    <description>case 21557803 - need to lock record to prevent updates by Implementation Specialist but allow owner update from Case to feed down to owner on Ref Core Payroll.  This field used by CaseOwnerChange class and workflow and is not on any page layouts.</description>
    <label>Record Locked</label>
    <type>Checkbox</type>
</CustomField>