force-app/main/default/objects/Reference_Core_Payroll__c/fields/Reoccuring_E_D_Converted__c.field-meta.xml
<CustomField>
    <fullName>Reoccuring_E_D_Converted__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Reoccuring E&amp;D Converted</label>
    <type>Date</type>
</CustomField>