force-app/main/default/objects/Reference_Core_Payroll__c/fields/Reviewed_By__c.field-meta.xml
<CustomField>
    <fullName>Reviewed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>MPSC Exception</description>
    <label>Reviewed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Reference_Core_Payroll8C4H</relationshipName>
    <type>Lookup</type>
</CustomField>