force-app/main/default/objects/Reference_Core_Payroll__c/fields/Service_Location__c.field-meta.xml
<CustomField>
    <fullName>Service_Location__c</fullName>
    <formula>Text(Case_Lookup__r.Service_Location__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Location</label>
    <type>Text</type>
</CustomField>