force-app/main/default/objects/Reference_Core_Payroll__c/fields/Split_Packs__c.field-meta.xml
<CustomField>
    <fullName>Split_Packs__c</fullName>
    <label>Split Packs have Clear Notes</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
            <value>
                <fullName>Incomplete - Notes are missing</fullName>
            </value>
            <value>
                <fullName>Incomplete - Notes are not clear</fullName>
            </value>
            <value>
                <fullName>Add&apos;l Audit - Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>