force-app/main/default/objects/Reference_Core_Payroll__c/fields/State_Filing_Frequency__c.field-meta.xml
<CustomField>
    <fullName>State_Filing_Frequency__c</fullName>
    <label>State Filing Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Add&apos;l Audit - Complete</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Incomplete – All State scan(s) do not match Core</fullName>
            </value>
            <value>
                <fullName>Incomplete – Missing scanned Doc - All States</fullName>
            </value>
            <value>
                <fullName>Incomplete – Missing Scanned Doc – Some States</fullName>
            </value>
            <value>
                <fullName>Incomplete – Not able to verify for any states</fullName>
            </value>
            <value>
                <fullName>Incomplete – Not able to verify for some states</fullName>
            </value>
            <value>
                <fullName>Incomplete – Some State scan(s) do not match Core</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>