force-app/main/default/objects/Reference_Core_Payroll__c/fields/State_Filing_Frequency_Notes__c.field-meta.xml
<CustomField>
    <fullName>State_Filing_Frequency_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>State Filing Frequency Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>