force-app/main/default/objects/Reference_Core_Payroll__c/fields/Submission_Lane__c.field-meta.xml
<CustomField>
    <fullName>Submission_Lane__c</fullName>
    <label>Submission Lane</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Run Me</fullName>
            </value>
            <value>
                <fullName>Engage Me</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>