force-app/main/default/objects/Reference_Core_Payroll__c/fields/Submitted_by_PACO_Team__c.field-meta.xml
<CustomField>
    <fullName>Submitted_by_PACO_Team__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Submitted by PACO Team</label>
    <type>Checkbox</type>
</CustomField>