force-app/main/default/objects/Reference_Core_Payroll__c/fields/Tax_ID_Verified_Notes__c.field-meta.xml
<CustomField>
    <fullName>Tax_ID_Verified_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tax ID Verified Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>