force-app/main/default/objects/Reference_Core_Payroll__c/fields/Taxpay_Approvedx__c.field-meta.xml
<CustomField>
    <fullName>Taxpay_Approvedx__c</fullName>
    <inlineHelpText>if not approved, email TaxpaySetup</inlineHelpText>
    <label>Taxpay Approved</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Add&apos;l Audit - Complete</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Incomplete - All agencies are not approved</fullName>
            </value>
            <value>
                <fullName>Incomplete - Some agencies are not approved</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>