force-app/main/default/objects/Reference_Core_Payroll__c/fields/Taxpay_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Taxpay_Indicator__c</fullName>
    <label>Taxpay Indicator</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>