force-app/main/default/objects/Reference_Core_Payroll__c/fields/Team_Member_Name__c.field-meta.xml
<CustomField>
    <fullName>Team_Member_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Team Member Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Reference_Core_Payroll6NUp</relationshipName>
    <type>Lookup</type>
</CustomField>