force-app/main/default/objects/Reference_Core_Payroll__c/fields/Voided_Ck_Date__c.field-meta.xml
<CustomField>
    <fullName>Voided_Ck_Date__c</fullName>
    <description>Voided Ck Submission Date</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Voided Ck Submission Date</inlineHelpText>
    <label>Voided Ck Submission Date</label>
    <type>Date</type>
</CustomField>