force-app/main/default/objects/Reference_Core_Payroll__c/fields/X1st_Payroll_Run_Week__c.field-meta.xml
<CustomField>
    <fullName>X1st_Payroll_Run_Week__c</fullName>
    <description>The week of the month the first payroll is set to run</description>
    <inlineHelpText>The week of the month the first payroll is set to run</inlineHelpText>
    <label>1st Payroll Run Week</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>