force-app/main/default/objects/Reference_Core_Payroll__c/fields/X1st_Perfect_Payroll_Date__c.field-meta.xml
<CustomField>
    <fullName>X1st_Perfect_Payroll_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>1st Perfect Payroll Date</label>
    <type>Date</type>
</CustomField>