force-app/main/default/objects/Reference_Core_Payroll__c/fields/X45_Day_Follow_Up_Call__c.field-meta.xml
<CustomField>
    <fullName>X45_Day_Follow_Up_Call__c</fullName>
    <defaultValue>false</defaultValue>
    <label>45 Day Follow Up Call</label>
    <type>Checkbox</type>
</CustomField>