force-app/main/default/objects/Reference_Core_Payroll__c/fields/Zero_Wage_Start__c.field-meta.xml
<CustomField>
    <fullName>Zero_Wage_Start__c</fullName>
    <label>Zero Wage Start</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>