force-app/main/default/objects/Reference_Core_Payroll__c/fields/Zone_Name__c.field-meta.xml
<CustomField>
    <fullName>Zone_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Zone Name</label>
    <length>225</length>
    <type>Text</type>
</CustomField>