force-app/main/default/objects/Reference_Core_Payroll__c/recordTypes/MPSC_ASO.recordType-meta.xml
<RecordType>
    <fullName>MPSC_ASO</fullName>
    <active>true</active>
    <label>MPSC Upgrade</label>
</RecordType>