force-app/main/default/objects/Reference_Core_Payroll__c/recordTypes/MPSC_Client_Audit.recordType-meta.xml
<RecordType>
    <fullName>MPSC_Client_Audit</fullName>
    <active>true</active>
    <label>MPSC Client Audit</label>
</RecordType>