force-app/main/default/objects/Reference_Core_Payroll__c/recordTypes/MPSC_Employee_Audit.recordType-meta.xml
<RecordType>
    <fullName>MPSC_Employee_Audit</fullName>
    <active>true</active>
    <label>MPSC Employee Audit</label>
</RecordType>