force-app/main/default/objects/Reference_Core_Payroll__c/recordTypes/MPSC_Exception.recordType-meta.xml
<RecordType>
    <fullName>MPSC_Exception</fullName>
    <active>true</active>
    <label>MPSC Exception</label>
</RecordType>