force-app/main/default/objects/Reference_Core_Payroll__c/recordTypes/MPSC_Implementation_Data_Collection.recordType-meta.xml
<RecordType>
    <fullName>MPSC_Implementation_Data_Collection</fullName>
    <active>true</active>
    <label>MPSC Implementation Data Collection</label>
</RecordType>