force-app/main/default/objects/Reference_Core_Payroll__c/recordTypes/MPSC_Reload.recordType-meta.xml
<RecordType>
    <fullName>MPSC_Reload</fullName>
    <active>true</active>
    <label>MPSC Reload</label>
</RecordType>