force-app/main/default/objects/Reference_Core_Payroll__c/recordTypes/Reference_MPSC_Upgrade.recordType-meta.xml
<RecordType>
    <fullName>Reference_MPSC_Upgrade</fullName>
    <active>true</active>
    <label>Reference MPSC Upgrade</label>
</RecordType>