force-app/main/default/objects/Reference_Core_Payroll__c/recordTypes/Reference_Onboarding_Core_Payroll.recordType-meta.xml
<RecordType>
    <fullName>Reference_Onboarding_Core_Payroll</fullName>
    <active>true</active>
    <description>Record Type for Core payroll reference record</description>
    <label>Reference Onboarding Core Payroll</label>
</RecordType>