force-app/main/default/objects/Reference_Core_Payroll__c/validationRules/Cannot_modify_the_New_Load_Performed_by.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_modify_the_New_Load_Performed_by</fullName>
    <active>true</active>
    <description>Owner cannot modify the New Load Performed by field</description>
    <errorConditionFormula>ISCHANGED( New_Load_Audit_Performed_by__c) &amp;&amp; ($User.FirstName = Owner:User.FirstName) &amp;&amp; ($User.LastName = Owner:User.LastName)</errorConditionFormula>
    <errorMessage>***Owner of record cannot update the New Load Performed by***</errorMessage>
</ValidationRule>