force-app/main/default/objects/Reference_Core_Payroll__c/validationRules/Change_Ownership_from_Queue_Rule3.validationRule-meta.xml
<ValidationRule>
    <fullName>Change_Ownership_from_Queue_Rule3</fullName>
    <active>false</active>
    <errorConditionFormula>NOT( BEGINS($Profile.Name,&quot;System Administrator&quot;)) &amp;&amp; OwnerId  =  &quot;00G70000001Y5aq&quot; &amp;&amp;  Client_Load_Received__c  &amp;&amp;   ISPICKVAL(Case_Lookup__r.Service_Location__c, &quot;Detroit Branch 0050&quot;) &amp;&amp; NOT(  Client_Load_Complete__c )</errorConditionFormula>
    <errorMessage>**** Ownership of the Case and Reference Core Payroll records  have to be updated to the NCS before you can save this record.  Go to the Case record to change the owner. ****</errorMessage>
</ValidationRule>