force-app/main/default/objects/Reference_Core_Payroll__c/validationRules/Check_Client_Load_Recieved_when_Dated.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Client_Load_Recieved_when_Dated</fullName>
    <active>true</active>
    <description>Check to indicate Client load has been received when a Date Client Load received has been entered</description>
    <errorConditionFormula>NOT( ISNULL(Date_Client_Load_Received__c) )   &amp;&amp;  NOT( Client_Load_Received__c ) &amp;&amp; (NOT( BEGINS($Profile.Name,&quot;System Administrator&quot;)))</errorConditionFormula>
    <errorDisplayField>Client_Load_Received__c</errorDisplayField>
    <errorMessage>***** Check to indicate Client load has been received *****</errorMessage>
</ValidationRule>