force-app/main/default/objects/Reference_Core_Payroll__c/validationRules/Date_Client_Load_Complete.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_Client_Load_Complete</fullName>
    <active>true</active>
    <description>Client load Complete Date has to be filled when Client Load Complete date is not null</description>
    <errorConditionFormula>ISBLANK( Date_Client_Load_Received__c ) &amp;&amp; NOT( ISBLANK( Date_IS_Assigned__c ) ) &amp;&amp; (NOT( BEGINS($Profile.Name,&quot;System Administrator&quot;)))</errorConditionFormula>
    <errorDisplayField>Date_Client_Load_Received__c</errorDisplayField>
    <errorMessage>***** Please Fill-in the Client Load Received Date ****</errorMessage>
</ValidationRule>