force-app/main/default/objects/Reference_Core_Payroll__c/validationRules/Date_Client_Load_Complete_Order.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_Client_Load_Complete_Order</fullName>
    <active>true</active>
    <description>Date Client Load Received can not be blank, if Client Load is Complete</description>
    <errorConditionFormula>NOT( ISNULL( Date_Client_Load_Complete__c ) )  &amp;&amp;  ISNULL(  Date_Client_Load_Received__c  ) &amp;&amp; (NOT( BEGINS($Profile.Name,&quot;System Administrator&quot;)))</errorConditionFormula>
    <errorDisplayField>Date_Client_Load_Complete__c</errorDisplayField>
    <errorMessage>**** Date Client Load Received can not be blank, if Client Load is Complete *****</errorMessage>
</ValidationRule>