force-app/main/default/objects/Reference_Core_Payroll__c/validationRules/Date_Transferred_to_PRS_order.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_Transferred_to_PRS_order</fullName>
    <active>false</active>
    <description>Payroll Run Date can not be blank, if transferred to payroll specialist</description>
    <errorConditionFormula>NOT( ISNULL(  Date_xferred_to_PR_Specialist__c  ) ) &amp;&amp; ISNULL(  Payroll_Run_Date__c  ) &amp;&amp; (NOT( BEGINS($Profile.Name,&quot;System Administrator&quot;)))</errorConditionFormula>
    <errorDisplayField>Date_xferred_to_PR_Specialist__c</errorDisplayField>
    <errorMessage>***** Payroll Run Date can not be blank, if transferred to payroll specialist ****</errorMessage>
</ValidationRule>