force-app/main/default/objects/Reference_Core_Payroll__c/validationRules/Day_Follow_Up_Call.validationRule-meta.xml
<ValidationRule>
    <fullName>Day_Follow_Up_Call</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
X45_Day_Follow_Up_Call__c = True, 
OR( 

ISBLANK(MPSC_IC__c) , 
ISBLANK(MPSC_IC_Notes__c ) , 
ISBLANK(Person_Spoken_With__c), 
ISBLANK(Text( CSS_Call__c ))))</errorConditionFormula>
    <errorMessage>MPSC IC, MPSC IC Notes, CSS call and Person Spoken With is required when 45 Day Follow Up Call is True</errorMessage>
</ValidationRule>