force-app/main/default/objects/Reference_Core_Payroll__c/validationRules/Exception_Outcome_Approved.validationRule-meta.xml
<ValidationRule>
    <fullName>Exception_Outcome_Approved</fullName>
    <active>true</active>
    <description>Round Robin is Required when Exception Outcome is Approved</description>
    <errorConditionFormula>AND(NOT(BEGINS($Profile.Name,&apos;System Admin&apos;)),$RecordType.Name=&apos;MPSC Exception&apos;,ISPICKVAL(Exception_Outcome__c,&apos;Approved&apos;),ISBLANK(TEXT( Round_Robin__c )))</errorConditionFormula>
    <errorMessage>Round Robin is Required when Exception Outcome is Approved</errorMessage>
</ValidationRule>