force-app/main/default/objects/Reference_Core_Payroll__c/validationRules/Exception_Outcome_Rejected.validationRule-meta.xml
<ValidationRule>
    <fullName>Exception_Outcome_Rejected</fullName>
    <active>true</active>
    <description>Rejection Reason is required when Exception Outcome is Rejected</description>
    <errorConditionFormula>AND(NOT(CONTAINS($Profile.Name,&apos;System Admin&apos;)),ISBLANK(Rejection_Reason__c),ISPICKVAL( Exception_Outcome__c,&apos;Rejected&apos;))</errorConditionFormula>
    <errorMessage>Rejection Reason is required when Exception Outcome is Rejected</errorMessage>
</ValidationRule>