force-app/main/default/objects/Reference_Core_Payroll__c/validationRules/Have_You_Engaged_SE_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Have_You_Engaged_SE_Required</fullName>
    <active>true</active>
    <description>Have You Engaged SE? is required when Interfaces With Outside Vendor?  is Yes</description>
    <errorConditionFormula>AND(NOT(BEGINS($Profile.Name,&apos;System Admin&apos;)),ISBLANK(TEXT( Have_you_engaged_SE__c)),ISPICKVAL( Interfaces_with_outside_vendor__c,&apos;Yes&apos; ))</errorConditionFormula>
    <errorDisplayField>Have_you_engaged_SE__c</errorDisplayField>
    <errorMessage>&quot;Have You Engaged SE?&quot; is required when &quot;Interfaces With Outside Vendor?&quot; is Yes</errorMessage>
</ValidationRule>