force-app/main/default/objects/Reference_Core_Payroll__c/validationRules/New_Client_Number_Format_Rule3.validationRule-meta.xml
<ValidationRule>
    <fullName>New_Client_Number_Format_Rule3</fullName>
    <active>true</active>
    <description>trying to prevent bad or not complete numbers from being manually entered and pushed up to the Account Number. Matches validation rule on Account.</description>
    <errorConditionFormula>AND(OR(ISNEW(),ISCHANGED(New_Prospect_Client_Number__c)), 
NOT(ISBLANK(New_Prospect_Client_Number__c)), 
NOT(BEGINS($Profile.Name, &quot;System Admin&quot;)), 
NOT(AND( 
REGEX(New_Prospect_Client_Number__c, &quot;[0-9]+[-]([A-Z0-9]{4}|[A-Z0-9]{8})&quot;), 
NOT(REGEX(New_Prospect_Client_Number__c, &quot;[0-9]+[-]([A-Z0-9])\\1{2}[A-Z0-9]{1}&quot;)), 
NOT(REGEX(New_Prospect_Client_Number__c, &quot;[0-9]+[-]([A-Z0-9])\\1{6}[A-Z0-9]{1}&quot;)), 
NOT(REGEX(New_Prospect_Client_Number__c, &quot;[0-9]+[-](0)\\1{3}[A-Z0-9]{4}&quot;)), 
NOT(REGEX(New_Prospect_Client_Number__c, &quot;[0-9]+[-](NPR)[A-Z0-9]*&quot;)) 
) 
) 
)</errorConditionFormula>
    <errorDisplayField>New_Prospect_Client_Number__c</errorDisplayField>
    <errorMessage>Incorrect format for New Prospect-Client Number.</errorMessage>
</ValidationRule>