force-app/main/default/objects/Reference_Core_Payroll__c/validationRules/New_Load_Perform_by_cannot_be_Owner.validationRule-meta.xml
<ValidationRule>
    <fullName>New_Load_Perform_by_cannot_be_Owner</fullName>
    <active>true</active>
    <description>New Load Audit Performed by</description>
    <errorConditionFormula>OwnerId =   New_Load_Audit_Performed_by__c</errorConditionFormula>
    <errorMessage>***New Load Performed by cannot be the same as the Owner***</errorMessage>
</ValidationRule>